Order service fixed